# minecraft-bot

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  egg-minecraft-bot.json  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
src/bot/: __main__.py  config.py  main.py  models.py
src/bot/cogs/: general.py  minecraft.py  power_monitor.py  pterodactyl.py  tasks.py
src/bot/core/: bot.py  cache.py  config.py  logger.py
src/bot/discord/: client.py
src/bot/services/: base.py  dtek.py  minecraft.py  outage.py  proxmox.py  pterodactyl.py
