[project]
name = "minecraft-bot"
version = "0.1.0"
description = "Discord bot that manages home Minecraft server infrastructure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "disnake>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "prek>=0.3.3",
    "ruff>=0.15.2",
]

[tool.basedpyright]
typeCheckingMode = "standard"
