[project]
name = "minecraft-bot"
version = "0.1.1"
description = "A Discord bot that manages your self-hosted Minecraft server infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
  "aiohttp>=3.13.3",
  "camoufox>=0.4.11",
  "disnake>=2.12.0",
  "mcstatus>=13.0.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
]

[project.urls]
Homepage = "https://github.com/Skrriply/minecraft-bot"
Issues = "https://github.com/Skrriply/minecraft-bot/issues"
Repository = "https://github.com/Skrriply/minecraft-bot.git"

[dependency-groups]
dev = [
  "basedpyright>=1.38.1",
  "prek>=0.3.3",
  "ruff>=0.15.2",
]

[tool.basedpyright]
typeCheckingMode = "standard"
